Started creating Country entity

--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -18,6 +18,7 @@
       <a class="nav-item nav-link" href="{{url_for('players')}}">Player</a>
       <a class="nav-item nav-link" href="{{url_for('banks')}}">Bank</a>
       <a class="nav-item nav-link" href="{{url_for('bets')}}">Bet</a>
+      <a class="nav-item nav-link" href="{{url_for('shop')}}">Country</a>
     </div>
   </div>
 </nav>
