Created page, form for creaeting new country

--- a/root/templates/countries.html
+++ b/root/templates/countries.html
@@ -10,7 +10,7 @@
 {%block content %}
 {{ super() }}
 
-<a href="{{url_for('create_player')}}" class="btn btn-primary">Create new country</a>
+<a href="{{url_for('create_country')}}" class="btn btn-primary">Create new country</a>
 <table class="table table-striped">
     <thead>
     <tr>
