--- a/root/templates/bar.html
+++ b/root/templates/bar.html
@@ -6,10 +6,27 @@
 </head>
 <body>
 {% extends 'index.html' %}
-    {%block content %}
-    {{ super() }}
-    <p>This is dashboard</p>
-    {%endblock%}
+{%block content %}
+
+<h1>Bar chart</h1>
+<div id="bar" class="bar">
+</div>
+
+
+<script src="{{ url_for('static', filename='js/d3.v5.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/plotly-latest.min.js') }}"></script>
+
+
+<script type="text/javascript">
+        var graphs = {{graphsJSON | safe}};
+        for(var block_id in graphs) {
+            Plotly.plot(block_id, // the ID of the div, created above
+                        graphs[block_id],{});
+        }
+
+
+</script>
+{%endblock%}
 
 </body>
 </html>
