--- a/root/templates/players.html
+++ b/root/templates/players.html
@@ -9,7 +9,7 @@
 {% extends 'index.html' %}
 {%block content %}
 {{ super() }}
-<a href="{{url_for('create_country')}}" class="btn btn-primary">Create new player</a>
+<a href="{{url_for('create_player')}}" class="btn btn-primary">Create new player</a>
 <table class="table table-striped">
     <thead>
     <tr>
