Completed migration to other database

--- a/root/templates/create_bank.html
+++ b/root/templates/create_bank.html
@@ -14,8 +14,8 @@
     {{form.hidden_tag()}}
     <div class="form-group">
 
-        {{form.player_id.label}}
-        {{form.player_id}}
+        {{form.player_username.label}}
+        {{form.player_username}}
         {{form.sold_time.label}}
         {{form.sold_time}}
         {{form.sold_coins.label}}
