--- a/root/templates/update_player.html
+++ b/root/templates/update_player.html
@@ -14,8 +14,8 @@
     {{form.hidden_tag()}}
 
     <div class="form-group">
-        {{form.id.label}}
-        {{form.id}}
+        {{form.player_username.label}}
+        {{form.player_username}}
         {{form.balance.label}}
         {{form.balance}}
         {{form.passwrd.label}}
