--- a/root/templates/bank.html
+++ b/root/templates/bank.html
@@ -13,7 +13,7 @@
 <table class="table table-striped">
     <thead>
     <tr>
-        <th scope="col">Id</th>
+        <th scope="col">Player</th>
         <th scope="col">Sold time</th>
         <th scope="col">Sold coins</th>
     </tr>
@@ -21,12 +21,12 @@
     <tbody>
     {% for bank in all_banks %}
     <tr>
-        <td>{{bank.player_id}}</td>
+        <td>{{bank.player_username}}</td>
         <td>{{bank.sold_time}}</td>
         <td>{{bank.sold_coins}}</td>
         <td class="d-flex justify-content-end">
-            <a href="{{url_for('update_bank', player_id=bank.player_id, sold_time=bank.sold_time)}}" class="btn btn-success">Edit</a>
-            <a href="{{url_for('delete_bank', player_id=bank.player_id, sold_time=bank.sold_time)}}" class="btn btn-danger">Delete</a>
+            <a href="{{url_for('update_bank', player_username=bank.player_username, sold_time=bank.sold_time)}}" class="btn btn-success">Edit</a>
+            <a href="{{url_for('delete_bank', player_username=bank.player_username, sold_time=bank.sold_time)}}" class="btn btn-danger">Delete</a>
     </tr>
     {% endfor %}
     </tbody>
