--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
      <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-   <title>Hello</title>
+   <title>Statistics</title>
 </head>
 <body>
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="{{url_for('hello')}}">Main page</a>
+<!--  <label class="navbar-brand">Main page</label>-->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
