--- a/root/templates/bet.html
+++ b/root/templates/bet.html
@@ -17,6 +17,8 @@
         <th scope="col">Possible win</th>
         <th scope="col">Bet won</th>
         <th scope="col">Bet time</th>
+        <th scope="col">Bet color</th>
+        <th scope="col">Bet number</th>
     </tr>
     </thead>
     <tbody>
@@ -27,7 +29,8 @@
         <td>{{bet.won_money}}</td>
         <td>{{bet.won_bet}}</td>
         <td>{{bet.bet_time}}</td>
-
+        <td>{{bet.bet_color}}</td>
+        <td>{{bet.bet_number}}</td>
         <td class="d-flex justify-content-end">
             <a href="{{url_for('update_bet', bet_id=bet.bet_id)}}" class="btn btn-success">Edit</a>
             <a href="{{url_for('delete_bet', bet_id=bet.bet_id)}}" class="btn btn-danger">Delete</a>
