Added AI and fixed some front-end

--- a/root/templates/bet.html
+++ b/root/templates/bet.html
@@ -14,7 +14,7 @@
     <tr>
         <th scope="col">Id</th>
         <th scope="col">Money on bet</th>
-        <th scope="col">Possible win</th>
+        <th scope="col">Actual win</th>
         <th scope="col">Bet won</th>
         <th scope="col">Bet time</th>
         <th scope="col">Bet color</th>
