--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -20,6 +20,7 @@
       <a class="nav-item nav-link" href="{{url_for('banks')}}">Bank</a>
       <a class="nav-item nav-link" href="{{url_for('bets')}}">Bet</a>
       <a class="nav-item nav-link" href="{{url_for('casinos')}}">Casino</a>
+      <a class="nav-item nav-link" href="{{url_for('analysis')}}">Analysis</a>
     </div>
   </div>
 </nav>
